<resources>
    <string name="app_name">Food Now App</string>
    <string name="food_now">Food Now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="app_slogan">Instant Food Delivery</string>
    <string name="email">Email</string>
    <string name="password">Passwrod</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_facebook">Sign In with Facebook</string>
    <string name="sign_in_google">Sign In With Google</string>
</resources>
